// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given a view component is running and the component has no head or bodyLast should return the expected values when requested 1`] = `
"<!doctype html>
   <html class=\\"b-pw-1280\\">
     <head>
       <meta charset=\\"utf-8\\">
       <meta http-equiv=\\"x-ua-compatible\\" content=\\"ie=edge\\">
       <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
       <link rel=\\"shortcut icon\\" type=\\"image/png\\" href=\\"http://localhost:undefined/image/icon/morph.png\\"/>
       <script src=\\"http://localhost:undefined/socket.io/socket.io.js\\"></script>
       
       <style>body {font-size: 62.5%;line-height: 1;}</style>
     </head>
     <body>
       <h1>Hello</h1>
       <script src=\\"//m.int.files.bbci.co.uk/modules/vendor/requirejs/2.1.20/require.min.js\\"></script>
       
       <script>const socket = io(\\"http://localhost:undefined\\"); socket.on(\\"reload\\", () => window.location.reload(true));</script>
     </body>
   </html>"
`;

exports[`given a view component is running can be requested with props 1`] = `
"<!doctype html>
   <html class=\\"b-pw-1280\\">
     <head>
       <meta charset=\\"utf-8\\">
       <meta http-equiv=\\"x-ua-compatible\\" content=\\"ie=edge\\">
       <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
       <link rel=\\"shortcut icon\\" type=\\"image/png\\" href=\\"http://localhost:undefined/image/icon/morph.png\\"/>
       <script src=\\"http://localhost:undefined/socket.io/socket.io.js\\"></script>
       <link>head1</link><link>head2</link>
       <style>body {font-size: 62.5%;line-height: 1;}</style>
     </head>
     <body>
       <h1>Hello</h1>
       <script src=\\"//m.int.files.bbci.co.uk/modules/vendor/requirejs/2.1.20/require.min.js\\"></script>
       <p>bodylast1</p><p>bodylast2</p>
       <script>const socket = io(\\"http://localhost:undefined\\"); socket.on(\\"reload\\", () => window.location.reload(true));</script>
     </body>
   </html>"
`;

exports[`given a view component is running can be requested without props 1`] = `
"<!doctype html>
   <html class=\\"b-pw-1280\\">
     <head>
       <meta charset=\\"utf-8\\">
       <meta http-equiv=\\"x-ua-compatible\\" content=\\"ie=edge\\">
       <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
       <link rel=\\"shortcut icon\\" type=\\"image/png\\" href=\\"http://localhost:undefined/image/icon/morph.png\\"/>
       <script src=\\"http://localhost:undefined/socket.io/socket.io.js\\"></script>
       <link>head1</link><link>head2</link>
       <style>body {font-size: 62.5%;line-height: 1;}</style>
     </head>
     <body>
       <h1>Hello</h1>
       <script src=\\"//m.int.files.bbci.co.uk/modules/vendor/requirejs/2.1.20/require.min.js\\"></script>
       <p>bodylast1</p><p>bodylast2</p>
       <script>const socket = io(\\"http://localhost:undefined\\"); socket.on(\\"reload\\", () => window.location.reload(true));</script>
     </body>
   </html>"
`;

exports[`local-push.js when there is a config value set for livePushPollInterval returns the file with the expected poll interval 1`] = `
"/* global window, XMLHttpRequest */
/* eslint-disable no-console */
window.define('live-push', [], () => {
  const intervals = {};
  const onMomentCallbacks = [];
  const consoleAvailable = !!window.console && !window.jasmine;
  const exports = {};

  function logSubscriptions() {
    console.info('Morph Live Push Local: subscriptions:', Object.keys(intervals));
  }

  function callbackAllOnMomentCallbacks(moment) {
    onMomentCallbacks.forEach(callback => {
      callback(moment);
    });
  }

  function fetch(topic, callbackWhen202, callback) {
    let url = \`http://localhost:4000/proxy\${topic.substring(12)}\`;

    if (topic.indexOf('nitro://') > -1) {
      url = \`http://open.test.bbci.co.uk/live-broker/moments?request=\${encodeURIComponent(topic)}\`;
    }

    const xhr = new XMLHttpRequest();
    xhr.open('GET', url, true);
    xhr.onreadystatechange = () => {
      let responseBody;
      if (xhr.readyState === 4) {
        const responseCode = xhr.status;
        if (responseCode === 200) {
          responseBody = xhr.responseText;
          if (topic.indexOf('nitro://') > -1) {
            // The LiveBroker returns a different format to Morph, so just return the raw moments
            responseBody = JSON.parse(xhr.responseText).moments;
          }
          callback({
            topic,
            payload: responseBody,
          });
        } else if (consoleAvailable) {
          console.warn('Morph Live Push Local: response code:', responseCode, 'for:', url);
          if (responseCode === 202 && callbackWhen202) {
            callback();
          }
        }
      }
    };
    xhr.send(null);
  }

  exports.subscribe = topic => {
    if (intervals[topic]) {
      return;
    }

    const poll = fetch.bind(this, topic, false, callbackAllOnMomentCallbacks);
    intervals[topic] = setInterval(poll, 42); //eslint-disable-line
    poll();

    if (consoleAvailable) {
      console.info('Morph Live Push Local: subscribed to:', topic);
      logSubscriptions();
    }
  };

  exports.unsubscribe = topic => {
    if (intervals[topic]) {
      clearInterval(intervals[topic]);
      delete intervals[topic];
      if (consoleAvailable) {
        console.info('Morph Live Push Local: unsubscribed from:', topic);
        logSubscriptions();
      }
    }
  };

  exports.start = () => {};

  exports.get = (topic, count, callback) => {
    if (consoleAvailable) {
      console.info('Morph Live Push Local: get (XHR):', topic);
    }

    fetch(topic, true, moment => {
      const moments = moment ? [moment] : [];
      callback(JSON.stringify({ moments }));
    });
  };

  exports.on = (channel, callback) => {
    onMomentCallbacks.push(callback);
  };

  exports.getInstance = () => {
    if (consoleAvailable) {
      console.info('Morph Live Push Local: getting instance...');
    }
    return exports;
  };

  return exports;
});
"
`;

exports[`local-push.js when there is no config value set for livePushPollInterval returns the file with the default poll interval 1`] = `
"/* global window, XMLHttpRequest */
/* eslint-disable no-console */
window.define('live-push', [], () => {
  const intervals = {};
  const onMomentCallbacks = [];
  const consoleAvailable = !!window.console && !window.jasmine;
  const exports = {};

  function logSubscriptions() {
    console.info('Morph Live Push Local: subscriptions:', Object.keys(intervals));
  }

  function callbackAllOnMomentCallbacks(moment) {
    onMomentCallbacks.forEach(callback => {
      callback(moment);
    });
  }

  function fetch(topic, callbackWhen202, callback) {
    let url = \`http://localhost:4000/proxy\${topic.substring(12)}\`;

    if (topic.indexOf('nitro://') > -1) {
      url = \`http://open.test.bbci.co.uk/live-broker/moments?request=\${encodeURIComponent(topic)}\`;
    }

    const xhr = new XMLHttpRequest();
    xhr.open('GET', url, true);
    xhr.onreadystatechange = () => {
      let responseBody;
      if (xhr.readyState === 4) {
        const responseCode = xhr.status;
        if (responseCode === 200) {
          responseBody = xhr.responseText;
          if (topic.indexOf('nitro://') > -1) {
            // The LiveBroker returns a different format to Morph, so just return the raw moments
            responseBody = JSON.parse(xhr.responseText).moments;
          }
          callback({
            topic,
            payload: responseBody,
          });
        } else if (consoleAvailable) {
          console.warn('Morph Live Push Local: response code:', responseCode, 'for:', url);
          if (responseCode === 202 && callbackWhen202) {
            callback();
          }
        }
      }
    };
    xhr.send(null);
  }

  exports.subscribe = topic => {
    if (intervals[topic]) {
      return;
    }

    const poll = fetch.bind(this, topic, false, callbackAllOnMomentCallbacks);
    intervals[topic] = setInterval(poll, 10000); //eslint-disable-line
    poll();

    if (consoleAvailable) {
      console.info('Morph Live Push Local: subscribed to:', topic);
      logSubscriptions();
    }
  };

  exports.unsubscribe = topic => {
    if (intervals[topic]) {
      clearInterval(intervals[topic]);
      delete intervals[topic];
      if (consoleAvailable) {
        console.info('Morph Live Push Local: unsubscribed from:', topic);
        logSubscriptions();
      }
    }
  };

  exports.start = () => {};

  exports.get = (topic, count, callback) => {
    if (consoleAvailable) {
      console.info('Morph Live Push Local: get (XHR):', topic);
    }

    fetch(topic, true, moment => {
      const moments = moment ? [moment] : [];
      callback(JSON.stringify({ moments }));
    });
  };

  exports.on = (channel, callback) => {
    onMomentCallbacks.push(callback);
  };

  exports.getInstance = () => {
    if (consoleAvailable) {
      console.info('Morph Live Push Local: getting instance...');
    }
    return exports;
  };

  return exports;
});
"
`;
